--- a/Styles/page2.css
+++ b/Styles/page2.css
@@ -1,13 +1,17 @@
 /* Los elementos con id se llama con # */
 #title {
+  font-family: 'Lato', sans-serif;
   text-align: center;
+  text-decoration: dashed;
+  text-shadow: 3px 3px 3px #0fac2c;
   font-size: 50px;
   font-weight: bold;
   color: #000000;
-  margin-top: 50px;
+  margin-top: 10px;
   margin-bottom: 50px;
 }
 p.text{
+  font-family: 'Lato', sans-serif;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
@@ -24,14 +28,16 @@ p.special{
   margin-bottom: 50px;
 }
 div p{
+  font-family: 'Lato', sans-serif;
   text-align: lright;
   font-size: 28px;
-  font-weight: lighter;
+  font-weight: bold;
   color: #da1a81;
   margin-top: 50px;
   margin-bottom: 50px;
 }
 div h1, div h2{
+  font-family: 'Lato';
   text-align: center;
   font-size: 30px;
   font-weight: bold;
@@ -40,11 +46,13 @@ div h1, div h2{
   margin-bottom: 50px;
 }
 table, th, td {
-   
+  margin:auto;
+  font-family: 'Lato';
   border: 1px solid black;
   border-collapse: collapse;
 }
-th, td {
+th, td{
+  margin:auto;
   padding: 15px;
   text-align: center;
 }
@@ -76,8 +84,48 @@ hiddden*/
   /* background-color: #68b114; */
   /* opacity: 0.5; */
   background-image: url("../images/background.jpg");
-  background-size: contain;
-  height: 200px;
- 
+  height: 100px;
+  text-align: center;
+  font-size: 50px;
+  text-shadow: #4d0382 5px 5px 5px;
+  margin: auto;
+  border: 2px solid rgb(155, 0, 0);
+  padding-top: 40px;
   
+  
+}
+.margen{
+  background-color: chocolate;
+  margin:auto;
+  padding: 15px 50px 50px 50px;
+  border: solid 2px black;
+  height: 300px;
+  width: 1000px;
+  overflow: scroll;
+  outline: 4px solid rgb(35, 37, 132);
+}
+
+.decoration{
+  text-decoration: underline;
+  text-decoration-color: rgb(17, 4, 139);
+  text-decoration-style: dotted;
+}
+a:link{
+  color: rgb(0, 0, 0);
+}
+a:visited{
+  color: rgb(196, 11, 11);
+}
+a:hover{
+  color: rgb(0, 0, 255);
+}
+a:active{
+  color: rgb(30, 255, 0);
+}
+ul{
+  background-color: rgb(108, 39, 136);
+  /* list-style-type: none;
+  padding-left: 0; */
+  list-style-position: inside;
+
 }
