--- a/Styles/page2.css
+++ b/Styles/page2.css
@@ -9,6 +9,7 @@
   color: #000000;
   margin-top: 10px;
   margin-bottom: 50px;
+  
 }
 p.text{
   font-family: 'Lato', sans-serif;
@@ -45,22 +46,7 @@ div h1, div h2{
   margin-top: 50px;
   margin-bottom: 50px;
 }
-table, th, td {
-  margin:auto;
-  font-family: 'Lato';
-  border: 1px solid black;
-  border-collapse: collapse;
-}
-th, td{
-  margin:auto;
-  padding: 15px;
-  text-align: center;
-}
-/* El * es para que se aplique a todos los elementos de la página */
-*{
-  font-size: 20px;
-  color: black;
-}
+
 /*
 solid: Crea un borde sólido y uniforme alrededor del elemento.
 dashed: Crea un borde discontinuo con líneas discontinuas.
@@ -93,6 +79,7 @@ hiddden*/
   padding-top: 40px;
   
   
+  
 }
 .margen{
   background-color: chocolate;
@@ -100,7 +87,7 @@ hiddden*/
   padding: 15px 50px 50px 50px;
   border: solid 2px black;
   height: 300px;
-  width: 1000px;
+  max-width: 1000px;
   overflow: scroll;
   outline: 4px solid rgb(35, 37, 132);
 }
@@ -128,4 +115,39 @@ ul{
   padding-left: 0; */
   list-style-position: inside;
 
+}
+table{
+  width: 100%;
+  margin: auto;
+  border: 2px solid black;
+  border-collapse: collapse;
+  padding: 10px;
+}
+table, th, td {
+  margin:auto;
+  font-family: 'Lato';
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+td{
+  margin:auto;
+  padding: 15px;
+  text-align: center;
+}
+/* El * es para que se aplique a todos los elementos de la página */
+*{
+  font-size: 20px;
+  color: black;
+}
+th{
+ background-color: rgb(10, 117, 21);
+  color: white;
+}
+tr:nth-child(even){
+  background-color: rgb(191, 230, 219);  
+}
+tr:hover{
+  background-color: rgb(190, 186, 230);
+  color: white;
+  cursor: pointer;
 }
