--- a/Styles/page3.css
+++ b/Styles/page3.css
@@ -1,8 +1,8 @@
 /* Los elementos con id se llama con # */
 #title {
-    font-family: 'Lato', sans-serif;
+    font-family: 'cursive', sans-serif;
     text-align: center;
-    text-decoration: dashed;
+    
     text-shadow: 3px 3px 3px #0fac2c;
     font-size: 50px;
     font-weight: bold;
@@ -12,7 +12,7 @@
     
   }
   p.text{
-    font-family: 'Lato', sans-serif;
+    font-family: 'cursive', sans-serif;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -29,11 +29,11 @@
     margin-bottom: 50px;
   }
   div p{
-    font-family: 'Lato', sans-serif;
-    text-align: lright;
+    font-family: 'cursive', sans-serif;
+    text-align: right;
     font-size: 28px;
     font-weight: bold;
-    color: #da1a81;
+    color: #001055;
     margin-top: 50px;
     margin-bottom: 50px;
   }
@@ -69,27 +69,27 @@
     /* background-color: rgba(0,0,0,0.2) */
     /* background-color: #68b114; */
     /* opacity: 0.5; */
-    background-image: url("../images/background.jpg");
+    
     height: 100px;
     text-align: center;
     font-size: 50px;
-    text-shadow: #4d0382 5px 5px 5px;
+    text-shadow: #09b68b 5px 5px 5px;
     margin: auto;
-    border: 2px solid rgb(155, 0, 0);
+    
     padding-top: 40px;
     
     
     
   }
   .margen{
-    background-color: chocolate;
-    margin:auto;
+    background-color: rgb(30, 210, 135);
+    
     padding: 15px 50px 50px 50px;
-    border: solid 2px black;
-    height: 300px;
+    border: dashed 3px rgb(1, 47, 107);
+    margin: auto;
     max-width: 1000px;
-    overflow: scroll;
-    outline: 4px solid rgb(35, 37, 132);
+    
+    
   }
   
   .decoration{
@@ -110,7 +110,7 @@
     color: rgb(30, 255, 0);
   }
   ul{
-    background-color: rgb(108, 39, 136);
+    background-color: rgb(198, 201, 181);
     /* list-style-type: none;
     padding-left: 0; */
     list-style-position: inside;
