--- a/Styles/page2.css
+++ b/Styles/page2.css
@@ -1,63 +1,21 @@
 /* Los elementos con id se llama con # */
-#title {
-  font-family: 'Lato', sans-serif;
+body{
+  background-color: blanchedalmond; 
   text-align: center;
-  text-decoration: dashed;
-  text-shadow: 3px 3px 3px #0fac2c;
-  font-size: 50px;
-  font-weight: bold;
-  color: #000000;
-  margin-top: 10px;
-  margin-bottom: 50px;
+}
+#title {
+  font-family: 'cursive', sans-serif;
+      text-align: center;
+      
+      text-shadow: 3px 3px 3px #0fac2c;
+      font-size: 50px;
+      
+      font-weight: bold;
+      color: #000000;
+      margin-top: 10px;
+      margin-bottom: 50px;
   
 }
-p.text{
-  font-family: 'Lato', sans-serif;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  color: #15016f;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-p.special{
-  text-align: left;
-  font-size: 24px;
-  font-weight: normal;
-  color: #0dba27;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-div p{
-  font-family: 'Lato', sans-serif;
-  text-align: lright;
-  font-size: 28px;
-  font-weight: bold;
-  color: #da1a81;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-div h1, div h2{
-  font-family: 'Lato';
-  text-align: center;
-  font-size: 30px;
-  font-weight: bold;
-  color: #0e0349;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-/*
-solid: Crea un borde sólido y uniforme alrededor del elemento.
-dashed: Crea un borde discontinuo con líneas discontinuas.
-dotted: Crea un borde con puntos pequeños y separados.
-double: Crea un borde con dos líneas paralelas.
-groove: Crea un borde tallado en el elemento, dando la apariencia de estar hundido.
-ridge: Crea un borde tallado en el elemento, dando la apariencia de estar sobresaliendo.
-inset: Crea un borde con una sombra interna, dando la apariencia de estar hundido.
-outset: Crea un borde con una sombra externa, dando la apariencia de estar sobresaliendo.
-none
-hiddden*/
 .color{
   /* border: 3px  black dashed; */
   border-style: solid;
@@ -65,38 +23,46 @@ hiddden*/
   border-radius: 5px;
   border-width: 5px;	
 }
+
 #fondo {
-  /* background-color: rgba(0,0,0,0.2) */
-  /* background-color: #68b114; */
-  /* opacity: 0.5; */
-  background-image: url("../images/background.jpg");
-  height: 100px;
+  font-family: 'cursive', sans-serif;
   text-align: center;
-  font-size: 50px;
-  text-shadow: #4d0382 5px 5px 5px;
-  margin: auto;
-  border: 2px solid rgb(155, 0, 0);
-  padding-top: 40px;
   
+  text-shadow: 3px 3px 3px #0fac2c;
+  font-size: 50px;
+  
+  font-weight: bold;
+  color: #000000;
+  margin-top: 10px;
+  margin-bottom: 50px;
   
   
 }
-.margen{
-  background-color: chocolate;
-  margin:auto;
-  padding: 15px 50px 50px 50px;
-  border: solid 2px black;
-  height: 300px;
-  max-width: 1000px;
-  overflow: scroll;
-  outline: 4px solid rgb(35, 37, 132);
+#algoritmo{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size: 20px;
+      font-weight: bold;
+}
+table, th, td {
+   
+  border: 2px solid black;
+  border-collapse: collapse;
+  margin: auto;
+}
+th, td {
+  padding: 15px;
+  text-align: center;
+}
+#TableAlg{
+  margin: auto; 
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman'; 
+  background-color: rgb(173, 133, 72); 
+
+}
+th{
+  font-size: 24px
 }
 
-.decoration{
-  text-decoration: underline;
-  text-decoration-color: rgb(17, 4, 139);
-  text-decoration-style: dotted;
-}
+
 a:link{
   color: rgb(0, 0, 0);
 }
@@ -109,46 +75,31 @@ a:hover{
 a:active{
   color: rgb(30, 255, 0);
 }
-ul{
-  background-color: rgb(108, 39, 136);
-  /* list-style-type: none;
-  padding-left: 0; */
-  list-style-position: inside;
-
+#html{
+  color:rgb(131, 5, 5);  margin: auto;
+border: 5px solid rgb(65, 3, 3);
 }
-table{
-  width: 100%;
-  margin: auto;
-  border: 2px solid black;
-  border-collapse: collapse;
-  padding: 10px;
+#css{
+  color:rgb(12, 67, 62);  margin: auto;
+border: 5px solid rgb(8, 107, 135);
 }
-table, th, td {
-  margin:auto;
-  font-family: 'Lato';
-  border: 1px solid black;
-  border-collapse: collapse;
+#js{
+  color: rgb(225, 178, 9); margin: auto;
+border: 5px solid rgb(147, 162, 8);
 }
-td{
-  margin:auto;
-  padding: 15px;
-  text-align: center;
+p{
+  font-family: 'cursive', sans-serif; font-size: 20px;
 }
-/* El * es para que se aplique a todos los elementos de la página */
-*{
-  font-size: 20px;
-  color: black;
+#MLTable{
+  background-color: aquamarine; 
+  font-size: 24px;
 }
-th{
- background-color: rgb(10, 117, 21);
-  color: white;
+#OSTable{
+  background-color: rgb(127, 72, 173);
+   font-size: 24px;
 }
-tr:nth-child(even){
-  background-color: rgb(191, 230, 219);  
-}
-tr:hover{
-  background-color: rgb(190, 186, 230);
-  color: white;
-  cursor: pointer;
+#OpenSourceTable{
+  background-color: rgb(165, 68, 15); 
+  font-size: 24px;
 }
 
